sample page and some conftest updates

--- a/Selenium/GlobalsQAPOM/pytest.ini
+++ b/Selenium/GlobalsQAPOM/pytest.ini
@@ -1,6 +1,9 @@
 [pytest]
 # Base directory for the tests
 testpaths = tests
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
 
 # Command-line options
 addopts = --maxfail=2 -v
